--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "out/index.js",
 	"types": "out/index.d.ts",
 	"scripts": {
-		"build": "tsc -b",
+		"build": "tsc -b && node ./scripts/clean-worker.js",
 		"watch": "tsc -b -w",
 		"prepublish": "npm run build"
 	},
@@ -32,6 +32,6 @@
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
-		"better-sqlite3": "*"
+		"better-sqlite3": "^11.8.1"
 	}
 }
