--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "CommonJS",
 		"moduleResolution": "node",
 		"target": "esnext",
 		"lib": ["esnext", "dom", "dom.iterable"],
