--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"build": "tsc -b && node ./scripts/clean-worker.js",
 		"watch": "tsc -b -w",
-		"prepublish": "npm run build"
+		"prepublish": "npm run build",
+		"electron-rebuild": "electron-rebuild -f -w better-sqlite3"
 	},
 	"keywords": [
 		"node",
@@ -29,7 +30,8 @@
 	"devDependencies": {
 		"@types/better-sqlite3": "*",
 		"@types/node": "^22.7.4",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"electron-rebuild": "^1.5.11"
 	},
 	"dependencies": {
 		"better-sqlite3": "^11.8.1"
