--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"@types/better-sqlite3": "*",
 		"@types/node": "^22.7.4",
 		"typescript": "^5.6.2",
-		"electron-rebuild": "^1.5.11"
+		"@electron/rebuild": "^3.7.1"
 	},
 	"dependencies": {
 		"better-sqlite3": "^11.8.1"
